Refactor code to use Lombok annotations for getters and setters, improve assertion readability in tests, and enhance method documentation